parallel preprocessing of images

--- a/vinbigdata-generate-dataset.ipynb
+++ b/vinbigdata-generate-dataset.ipynb
@@ -31,6 +31,12 @@
     "import seaborn as sns\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
+    "from pandarallel import pandarallel\n",
+    "pandarallel.initialize(progress_bar=True, verbose=0)\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "# Problem with pydicom: https://stackoverflow.com/questions/60485393/jpeg2000-losses-read-dicom-in-python-3-7"
    ]
   },
@@ -185,6 +191,8 @@
     "PATH_INPUT = \"/home/jupyter/DATA/\"\n",
     "PATH_TRAIN_IMAGES = PATH_INPUT+\"train/\"\n",
     "PATH_TRAIN_IMAGES_RESIZED=PATH_INPUT+\"resized/\"\n",
+    "PATH_TRAIN_IMAGES_CSV_TRAIN=PATH_INPUT+\"csv_train/\"\n",
+    "PATH_TRAIN_IMAGES_CSV_TEST=PATH_INPUT+\"csv_test/\"\n",
     "PATH_GCS_BUCKET = \"gs://vinbigdatadaruai/\"\n",
     "PATH_GCS_IMAGES = PATH_GCS_BUCKET+\"resized/\"\n",
     "\n",
@@ -193,7 +201,8 @@
     "        os.makedirs(path)\n",
     "        \n",
     "mkdir(PATH_TRAIN_IMAGES_RESIZED)\n",
-    "\n",
+    "mkdir(PATH_TRAIN_IMAGES_CSV_TRAIN)\n",
+    "mkdir(PATH_TRAIN_IMAGES_CSV_TEST)\n",
     "\n",
     "df_labels=pd.read_csv(PATH_INPUT+\"train.csv\")\n",
     "df_labels[\"path\"]=df_labels.image_id.apply(lambda x: PATH_TRAIN_IMAGES+f\"{x}.dicom\")\n",
@@ -950,6 +959,204 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_image_labels_per_sample(image_id,dicom_folder,resized_folder,path_csv,image_size=512):\n",
+    "    diagnostic_per_image=[]\n",
+    "    image_df = df_train.query(f\"image_id=='{image_id}'\").query(\"class_id!=0\") # Select all rows for an image id\n",
+    "    class_list = []\n",
+    "    RLE_list = []\n",
+    "\n",
+    "    # Load image\n",
+    "    dicom_image = dicom2array(dicom_folder+image_id+\".dicom\",clahe_normalization=True)\n",
+    "    image_dimensions = dicom_image.shape\n",
+    "\n",
+    "    # Resize and save image\n",
+    "    resized_img = cv2.resize(dicom_image, (image_size,image_size), interpolation = cv2.INTER_AREA)\n",
+    "    cv2.imwrite(resized_folder+image_id+\".jpg\", resized_img) \n",
+    "\n",
+    "    if image_df.shape[0]==0: # No annotations in the image\n",
+    "        class_list.append(0)\n",
+    "        mask = np.full(image_dimensions,0).astype(np.float32)\n",
+    "        resized_mask = cv2.resize(mask, (image_size,image_size))\n",
+    "        RLE_list.append(rle_encoding(resized_mask))\n",
+    "\n",
+    "    else:\n",
+    "        for diagnostic_id, diagnostic in image_df.iterrows(): # For each annotation...\n",
+    "            class_list.append(diagnostic.class_id)\n",
+    "\n",
+    "            mask = get_mask(image_dimensions, int(diagnostic.x_min), int(diagnostic.y_min), int(diagnostic.x_max), int(diagnostic.y_max))\n",
+    "            resized_mask = cv2.resize(mask, (image_size,image_size))\n",
+    "            RLE_list.append(rle_encoding(resized_mask))\n",
+    "\n",
+    "    diagnostic_per_image.append({\"image_id\":image_id,\n",
+    "                                 \"CategoryId\":class_list,\n",
+    "                                 \"EncodedPixels\":RLE_list})\n",
+    "\n",
+    "    samples_df = pd.DataFrame(diagnostic_per_image)\n",
+    "    samples_df[\"Height\"] = image_size\n",
+    "    samples_df[\"Width\"] = image_size\n",
+    "    samples_df.to_csv(path_csv+f\"{image_id}.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c1544e706e1442d0998bb2cb3b1752c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=750), Label(value='0 / 750'))), HB…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Process ForkPoolWorker-3:\n",
+      "Process ForkPoolWorker-11:\n",
+      "Process ForkPoolWorker-7:\n",
+      "Process ForkPoolWorker-15:\n",
+      "Process ForkPoolWorker-10:\n",
+      "Process ForkPoolWorker-16:\n",
+      "Process ForkPoolWorker-8:\n",
+      "Process ForkPoolWorker-5:\n",
+      "Process ForkPoolWorker-13:\n",
+      "Process ForkPoolWorker-2:\n",
+      "Process ForkPoolWorker-17:\n",
+      "Process ForkPoolWorker-4:\n",
+      "Process ForkPoolWorker-6:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-11-0b754d01ffec>\", line 25, in get_image_labels_per_sample\n",
+      "    mask = get_mask(image_dimensions, int(diagnostic.x_min), int(diagnostic.y_min), int(diagnostic.x_max), int(diagnostic.y_max))\n",
+      "  File \"pandas/_libs/lib.pyx\", line 2467, in pandas._libs.lib.map_infer\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/process.py\", line 297, in _bootstrap\n",
+      "    self.run()\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/process.py\", line 99, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/pool.py\", line 121, in worker\n",
+      "    result = (True, func(*args, **kwds))\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/pool.py\", line 44, in mapstar\n",
+      "    return list(map(*args))\n",
+      "  File \"/opt/conda/lib/python3.7/multiprocessing/pool.py\", line 44, in mapstar\n",
+      "    return list(map(*args))\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/pandarallel.py\", line 64, in global_worker\n",
+      "    return _func(x)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/pandarallel.py\", line 64, in global_worker\n",
+      "    return _func(x)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/pandarallel.py\", line 116, in wrapper\n",
+      "    **kwargs\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/pandarallel.py\", line 116, in wrapper\n",
+      "    **kwargs\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/data_types/series.py\", line 20, in worker\n",
+      "    return series.apply(func, *args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandarallel/data_types/series.py\", line 20, in worker\n",
+      "    return series.apply(func, *args, **kwargs)\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandas/core/series.py\", line 4108, in apply\n",
+      "    mapped = lib.map_infer(values, f, convert=convert_dtype)\n",
+      "  File \"pandas/_libs/lib.pyx\", line 2467, in pandas._libs.lib.map_infer\n",
+      "  File \"/opt/conda/lib/python3.7/site-packages/pandas/core/series.py\", line 4108, in apply\n",
+      "    mapped = lib.map_infer(values, f, convert=convert_dtype)\n",
+      "  File \"<ipython-input-12-09b6a614e88d>\", line 5, in get_image_labels_per_sample_aux\n",
+      "    path_csv=PATH_TRAIN_IMAGES_CSV_TRAIN)\n",
+      "  File \"<ipython-input-12-09b6a614e88d>\", line 5, in get_image_labels_per_sample_aux\n",
+      "    path_csv=PATH_TRAIN_IMAGES_CSV_TRAIN)\n",
+      "  File \"<ipython-input-11-0b754d01ffec>\", line 25, in get_image_labels_per_sample\n",
+      "    mask = get_mask(image_dimensions, int(diagnostic.x_min), int(diagnostic.y_min), int(diagnostic.x_max), int(diagnostic.y_max))\n",
+      "  File \"<ipython-input-10-afe39635948d>\", line 11, in get_mask\n",
+      "    return img_mask.astype(np.float32)\n",
+      "  File \"<ipython-input-10-afe39635948d>\", line 11, in get_mask\n",
+      "    return img_mask.astype(np.float32)\n",
+      "KeyboardInterrupt\n",
+      "KeyboardInterrupt\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_train_ids=df_train.image_id.drop_duplicates()\n",
+    "def get_image_labels_per_sample_aux(image_id):\n",
+    "    get_image_labels_per_sample(image_id,dicom_folder=PATH_TRAIN_IMAGES,\n",
+    "                            resized_folder=PATH_TRAIN_IMAGES_RESIZED,\n",
+    "                            path_csv=PATH_TRAIN_IMAGES_CSV_TRAIN)\n",
+    "    \n",
+    "df_train_ids.parallel_apply(get_image_labels_per_sample_aux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test_ids=df_test.image_id.drop_duplicates()\n",
+    "\n",
+    "def get_image_labels_per_sample_aux(image_id):\n",
+    "    get_image_labels_per_sample(image_id,dicom_folder=PATH_TRAIN_IMAGES,\n",
+    "                            resized_folder=PATH_TRAIN_IMAGES_RESIZED,\n",
+    "                            path_csv=PATH_TRAIN_IMAGES_CSV_TEST)\n",
+    "\n",
+    "df_test_ids.parallel_apply(get_image_labels_per_sample_aux)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "all_files = glob.glob(PATH_TRAIN_IMAGES_CSV_TRAIN + \"/*.csv\")\n",
+    "\n",
+    "li = []\n",
+    "\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+    "    li.append(df)\n",
+    "\n",
+    "frame = pd.concat(li, axis=0, ignore_index=True)\n",
+    "frame.to_csv(PATH_GCS_BUCKET+\"df_train_info.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_files = glob.glob(PATH_TRAIN_IMAGES_CSV_TEST + \"/*.csv\")\n",
+    "\n",
+    "li = []\n",
+    "\n",
+    "for filename in all_files:\n",
+    "    df = pd.read_csv(filename, index_col=None, header=0)\n",
+    "    li.append(df)\n",
+    "\n",
+    "frame = pd.concat(li, axis=0, ignore_index=True)\n",
+    "frame.to_csv(PATH_GCS_BUCKET+\"df_test_info.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-09T20:02:17.841556Z",
@@ -966,44 +1173,17 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bb1d6201c9da4d5e9713d25297d66bd7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/pydicom/pixel_data_handlers/pillow_handler.py:177: UserWarning: The (0028,0101) 'Bits Stored' value (14-bit) doesn't match the JPEG 2000 data (16-bit). It's recommended that you change the 'Bits Stored' value\n",
-      "  f\"The (0028,0101) 'Bits Stored' value ({ds.BitsStored}-bit) \"\n",
-      "/opt/conda/lib/python3.7/site-packages/pydicom/pixel_data_handlers/pillow_handler.py:177: UserWarning: The (0028,0101) 'Bits Stored' value (12-bit) doesn't match the JPEG 2000 data (16-bit). It's recommended that you change the 'Bits Stored' value\n",
-      "  f\"The (0028,0101) 'Bits Stored' value ({ds.BitsStored}-bit) \"\n",
-      "/opt/conda/lib/python3.7/site-packages/pydicom/pixel_data_handlers/pillow_handler.py:177: UserWarning: The (0028,0101) 'Bits Stored' value (12-bit) doesn't match the JPEG 2000 data (16-bit). It's recommended that you change the 'Bits Stored' value\n",
-      "  f\"The (0028,0101) 'Bits Stored' value ({ds.BitsStored}-bit) \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_train_info = get_image_labels(df_train, \n",
-    "                                 dicom_folder=PATH_TRAIN_IMAGES,\n",
-    "                                 resized_folder=PATH_TRAIN_IMAGES_RESIZED)\n",
-    "df_train_info.to_csv(PATH_GCS_BUCKET+\"df_train_info.csv\",index=False)"
+    "#df_train_info = get_image_labels(df_train, \n",
+    "#                                 dicom_folder=PATH_TRAIN_IMAGES,\n",
+    "#                                 resized_folder=PATH_TRAIN_IMAGES_RESIZED)\n",
+    "#df_train_info.to_csv(PATH_GCS_BUCKET+\"df_train_info.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-09T20:02:31.884624Z",
@@ -1020,33 +1200,17 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de9888da405e47ba997cc8de403c20ba",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/5 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
-    "df_test_info = get_image_labels(df_test, \n",
-    "                                 dicom_folder=PATH_TRAIN_IMAGES,\n",
-    "                                 resized_folder=PATH_TRAIN_IMAGES_RESIZED)\n",
-    "df_test_info.to_csv(PATH_GCS_BUCKET+\"df_test_info.csv\",index=False)"
+    "#df_test_info = get_image_labels(df_test, \n",
+    "#                                 dicom_folder=PATH_TRAIN_IMAGES,\n",
+    "#                                 resized_folder=PATH_TRAIN_IMAGES_RESIZED)\n",
+    "#df_test_info.to_csv(PATH_GCS_BUCKET+\"df_test_info.csv\",index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-09T20:02:43.671669Z",
@@ -1063,44 +1227,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Copying file:///home/jupyter/DATA/resized/063319de25ce7edb9b1c6b8881290140.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/cdbacab6bf30170ef0ba9fd1d195d270.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/321c111713c3ee5385db0effb54ff568.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/f55460fccf2d3c591f57f9c0de2c37c2.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/21a10246a5ec7af151081d0cd6d65dc9.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/d3637a1935a905b3c326af31389cb846.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/47ed17dcb2cbeec15182ed335a8b5a9e.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/5da264775732004f1b724b660138854a.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/afb6230703512afc370f236e8fe98806.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/80caa435b6ab5edaff4a0a758ffaec6e.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/0c7a38f293d5f5e4846aa4ca6db4daf1.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/1c32170b4af4ce1a3030eb8167753b06.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/18a61a07e6f5f13ebfee57fa36cd8b6f.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/0622cd29e4e0e4f198abf15614819ae8.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/869f39afbdd8783b531530942eda8bad.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/8e063eadea9a6aeb684c893c8598be3e.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/50a418190bc3fb1ef1633bf9678929b3.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/d86c7405606f965ab7300ef1eacbcacc.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/c6e0ab2470d98a6a8c701e774df929cc.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/7c1add6833d5f0102b0d3619a1682a64.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/5550a493b1c4554da469a072fdfab974.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/051132a778e61a86eb147c7c6f564dfe.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/9a5094b2563a1ef3ff50dc5c7ff71345.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/fb8e11c6b2886b2d41b379e0598669b9.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/.ipynb_checkpoints/d3637a1935a905b3c326af31389cb846-checkpoint.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/.ipynb_checkpoints/0c7a38f293d5f5e4846aa4ca6db4daf1-checkpoint.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/.ipynb_checkpoints/1c32170b4af4ce1a3030eb8167753b06-checkpoint.jpg [Content-Type=image/jpeg]...\n",
-      "Copying file:///home/jupyter/DATA/resized/.ipynb_checkpoints/47ed17dcb2cbeec15182ed335a8b5a9e-checkpoint.jpg [Content-Type=image/jpeg]...\n",
-      "- [28/28 files][  2.1 MiB/  2.1 MiB] 100% Done                                  \n",
-      "Operation completed over 28 objects/2.1 MiB.                                     \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Move images to GCS\n",
     "!gsutil -m cp -r $PATH_TRAIN_IMAGES_RESIZED $PATH_GCS_BUCKET"
@@ -1108,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-01-09T20:02:46.956679Z",
@@ -1125,21 +1252,18 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Did you mean this?\n",
-      "\tcompose\n",
-      "CommandException: Invalid command \"compute\".\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Shutdown instance\n",
     "!sudo poweroff"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
