--- a/vinbigdata-detectron2.ipynb
+++ b/vinbigdata-detectron2.ipynb
@@ -476,7 +476,8 @@
     "from detectron2.engine import DefaultTrainer\n",
     "import torch\n",
     "import time\n",
-    "import datetime"
+    "import datetime\n",
+    "import logging"
    ]
   },
   {
@@ -935,7 +936,7 @@
     "cfg.merge_from_file(model_zoo.get_config_file(\"COCO-InstanceSegmentation/mask_rcnn_R_50_FPN_3x.yaml\"))\n",
     "cfg.DATASETS.TRAIN = (\"xray_train\",)\n",
     "cfg.DATASETS.TEST = (\"xray_val\",)\n",
-    "cfg.TEST.EVAL_PERIOD = 500\n",
+    "cfg.TEST.EVAL_PERIOD = 2000\n",
     "cfg.DATALOADER.NUM_WORKERS = 8\n",
     "if not cuda_bool:\n",
     "    cfg.MODEL.DEVICE=\"cpu\" #For CPU\n",
@@ -983,7 +984,7 @@
     }
    ],
    "source": [
-    "trainer.resume_or_load(resume=False)\n",
+    "trainer.resume_or_load(resume=True)\n",
     "trainer.train()"
    ]
   },
